--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-cayman
+title:Welcome to Kevin Goncalves' webpage!
+description: I am currently a graduate student in Judith Frydman's lab studying molecular mechanisms of protein folding.
