--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-slate
 title: Welcome to Kevin Goncalves' webpage!
-description: I am currently a graduate student in Judith Frydman's lab studying molecular mechanisms of protein folding.
+description: I am currently a graduate student in Judith Frydman's lab studying molecular mechanisms of protein folding. Learn more about me!
