--- a/_config.yml
+++ b/_config.yml
@@ -46,7 +46,7 @@ linkedin_username: kevin-goncalves-76b4061a2
 
 # About Section
 # about_title: About Me
-about_profile_image: images/profile.jpg
+about_profile_image: images/kg_profile.jpg
 about_content: | # this will include new lines to allow paragraphs
   Hi, my name's Kevin. I am a 5th year PhD student in Structural Biology investigating molecular mechanisms of chaperones as they fold client proteins. I've worked on projects that spanned synthetic organic chemistry to protein modeling.
 
