--- a/_config.yml
+++ b/_config.yml
@@ -115,7 +115,7 @@ plugins:
   - jekyll-github-metadata
   - jekyll-paginate-v2
   - jekyll/scholar
-  - jekyll-twitter-plugin
+  #- jekyll-twitter-plugin
   - jemoji
   # - bootstrap
   # - material-sass
